# electerm-sync-server-rust

./: .env  .gitignore  Cargo.toml  README.md  readme_cn.md  sample.env
.github/workflows/: linux.yml
src/: file_store.rs  jwt_middleware.rs  main.rs  web_app.rs
tests/: integration_test.rs
