[package]
name = "electerm-sync-rust-server"
version = "0.1.0"
edition = "2021"
include = ["/src/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
serde_json = "1.0.92"
env_logger = "*"
serde = "*"