[package]
name = "electerm-sync-rust-server"
version = "0.1.0"
edition = "2021"
include = ["/src/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
serde_json = "1.0.96"
env_logger = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
actix-rt = "2.8.0"
time = "0.3.35"

[dev-dependencies]
chrono = "0.4.26"