[package]
name = "electerm-sync-rust-server"
version = "0.1.0"
edition = "2021"
include = ["/src/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
serde_json = "1.0.145"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
actix-rt = "2.11.0"
time = "0.3.44"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
num_cpus = "1.16"

[dev-dependencies]
chrono = "0.4.42"